components/infra-k8s/deployment/system-init.yaml
# VerneMQ
apiVersion: v1
kind: Service
metadata:
  name: vernemq
  labels:
     bootstrap: "true"
spec:
  selector:
    app: vernemq
  ports:
    - protocol: TCP
      port: 1883
---
# si-account
apiVersion: v1
kind: Service
metadata:
  name: si-account
  labels:
     bootstrap: "true"
spec:
  selector:
    app: si-account
  ports:
    - protocol: TCP
      port: 5151

---
# si-ssh-key
apiVersion: v1
kind: Service
metadata:
  name: si-ssh-key
  labels:
     bootstrap: "true"
spec:
  selector:
    app: si-ssh-key
  ports:
    - protocol: TCP
      port: 5152

---
# si-aws-eks-cluster-runtime
apiVersion: v1
kind: Service
metadata:
  name: si-aws-eks-cluster-runtime
  labels:
     bootstrap: "true"
spec:
  selector:
    app: si-aws-eks-cluster-runtime
  ports:
    - protocol: TCP
      port: 5154

---
# si-external-api-gateway
apiVersion: v1
kind: Service
metadata:
  name: si-external-api-gateway
  labels:
     bootstrap: "true"
spec:
  selector:
    app: si-external-api-gateway
  ports:
    - protocol: TCP
      port: 4001

---
# si-graphql-api
apiVersion: v1
kind: Service
metadata:
  name: si-graphql-api
  labels:
     bootstrap: "true"
spec:
  selector:
    app: si-graphql-api
  ports:
    - name: si-graphql-api-port
      port: 4000 
      targetPort: 4000
  type: NodePort

---
# si-graphql-api-ingress
#
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "si-graphql-api-ingress"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:us-east-2:835304779882:certificate/607ac5d9-94f9-4b8d-bf58-1927641a49d5"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
  labels:
    app: 2048-ingress
spec:
  tls:
    - hosts:
      - graphql.systeminit.com
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
          - path: /*
            backend:
              serviceName: "si-graphql-api"
              servicePort: 4000 

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vernemq
    bootstrap: "true"
  name: vernemq-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vernemq
  template:
    metadata:
      annotations:
        config.linkerd.io/skip-inbound-ports: "1883"
        config.linkerd.io/skip-outbound-ports: "1883"
        linkerd.io/inject: enabled
      labels:
        app: vernemq
        bootstrap: "true"
    spec:
      containers:
      - env:
        - name: DOCKER_VERNEMQ_ACCEPT_EULA
          value: "yes"
        - name: DOCKER_VERNEMQ_ALLOW_ANONYMOUS
          value: "on"
        image: erlio/docker-vernemq
        name: vernemq
        ports:
        - containerPort: 1883
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: si-account
    bootstrap: "true"
  name: si-account-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: si-account
  template:
    metadata:
      annotations:
        config.linkerd.io/skip-inbound-ports: "1883"
        config.linkerd.io/skip-outbound-ports: "1883"
        linkerd.io/inject: enabled
      labels:
        app: si-account
        bootstrap: "true"
    spec:
      containers:
      - env:
        - name: NO_SIGNUPS
          value: "1"
        - name: RUST_LOG
          value: DEBUG
        image: 835304779882.dkr.ecr.us-east-2.amazonaws.com/si/si-account-service:latest
        name: si-account
        ports:
        - containerPort: 5151
        volumeMounts:
        - mountPath: /svc/si-account/config
          name: si-account-config-dir
          readOnly: true
      volumes:
      - name: si-account-config-dir
        secret:
          secretName: si-account-service-config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: si-ssh-key
    bootstrap: "true"
  name: si-ssh-key-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: si-ssh-key
  template:
    metadata:
      annotations:
        config.linkerd.io/skip-inbound-ports: "1883"
        config.linkerd.io/skip-outbound-ports: "1883"
        linkerd.io/inject: enabled
      labels:
        app: si-ssh-key
        bootstrap: "true"
    spec:
      containers:
      - env:
        - name: RUST_LOG
          value: DEBUG
        - name: SI_EXTERNAL_API_GATEWAY_URL
          value: "http://si-external-api-gateway.default:4001"
        image: 835304779882.dkr.ecr.us-east-2.amazonaws.com/si/si-ssh-key-service:latest
        name: si-ssh-key
        ports:
        - containerPort: 5152
        volumeMounts:
        - mountPath: /svc/si-ssh-key/config
          name: si-ssh-key-config-dir
          readOnly: true
      volumes:
      - name: si-ssh-key-config-dir
        secret:
          secretName: si-ssh-key-service-config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: si-aws-eks-cluster-runtime
    bootstrap: "true"
  name: si-aws-eks-cluster-runtime-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: si-aws-eks-cluster-runtime
  template:
    metadata:
      annotations:
        config.linkerd.io/skip-inbound-ports: "1883"
        config.linkerd.io/skip-outbound-ports: "1883"
        linkerd.io/inject: enabled
      labels:
        app: si-aws-eks-cluster-runtime
        bootstrap: "true"
    spec:
      containers:
      - env:
        - name: RUST_LOG
          value: DEBUG
        - name: SI_EXTERNAL_API_GATEWAY_URL
          value: "http://si-external-api-gateway.default:4001"
        image: 835304779882.dkr.ecr.us-east-2.amazonaws.com/si/si-aws-eks-cluster-runtime-service:latest
        name: si-aws-eks-cluster-runtime
        ports:
        - containerPort: 5154
        volumeMounts:
        - mountPath: /svc/si-aws-eks-cluster-runtime/config
          name: si-aws-eks-cluster-runtime-config-dir
          readOnly: true
      volumes:
      - name: si-aws-eks-cluster-runtime-config-dir
        secret:
          secretName: si-aws-eks-cluster-runtime-service-config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: si-external-api-gateway
    bootstrap: "true"
  name: si-external-api-gateway-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: si-external-api-gateway
  template:
    metadata:
      annotations:
        config.linkerd.io/skip-inbound-ports: "1883"
        config.linkerd.io/skip-outbound-ports: "1883"
        linkerd.io/inject: enabled
      labels:
        app: si-external-api-gateway
        bootstrap: "true"
    spec:
      serviceAccountName: si-external-api-gateway
      containers:
      - env:
        - name: LOG_LEVEL
          value: debug
        image: 835304779882.dkr.ecr.us-east-2.amazonaws.com/si/si-external-api-gateway-service:latest
        name: si-external-api-gateway
        ports:
        - containerPort: 4001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: si-graphql-api
    bootstrap: "true"
  name: si-graphql-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: si-graphql-api
  template:
    metadata:
      annotations:
        config.linkerd.io/skip-inbound-ports: "1883"
        config.linkerd.io/skip-outbound-ports: "1883"
        linkerd.io/inject: enabled
      labels:
        app: si-graphql-api
        bootstrap: "true"
    spec:
      containers:
      - env:
        - name: LOG_LEVEL
          value: debug
        - name: MQTT_BROKER_URL
          value: "mqtt://vernemq.default"
        - name: SERVICES_SI_ACCOUNT
          value: si-account.default:5151
        - name: SERVICES_SI_SSH_KEY
          value: si-ssh-key.default:5152
        - name: SERVICES_SI_AWS_EKS_CLUSTER_RUNTIME
          value: si-aws-eks-cluster-runtime.default:5154
        image: 835304779882.dkr.ecr.us-east-2.amazonaws.com/si/si-graphql-api-service:latest
        name: si-graphql-api
        ports:
        - containerPort: 4000
